unpackaged/main/default/objects/ResourceAbsence/ResourceAbsence.object-meta.xml
<CustomObject>
    <sharingModel>ControlledByParent</sharingModel>  
</CustomObject>