unpackaged/main/default/objects/ResourceAbsence/fields/Duration_in_Days__c.field-meta.xml
<CustomField>
    <fullName>Duration_in_Days__c</fullName>
    <description>Duration of the Resource Absence request in days.</description>
    <formula>FSL__Duration_In_Minutes__c /1440</formula>
    <inlineHelpText>Duration of the Resource Absence request in days.</inlineHelpText>
    <label>Duration in Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>