unpackaged/main/default/objects/ResourceAbsence/fields/Sent_for_Approval_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Sent_for_Approval_Date_Time__c</fullName>
    <description>The Date/Time this Resource Absence was sent for approval - should only be for Leave Requests of Type: Appointment/Sick / Unplanned Absence or Holiday.</description>
    <inlineHelpText>The Date/Time this Resource Absence was sent for approval - should only be for Leave Requests of Type: Appointment/Sick / Unplanned Absence or Holiday.</inlineHelpText>
    <label>Sent for Approval Date/Time</label>
    <type>DateTime</type>
</CustomField>