unpackaged/main/default/objects/ResourceAbsence/fields/Service_Resource_Name__c.field-meta.xml
<CustomField>
    <fullName>Service_Resource_Name__c</fullName>
    <description>Name of the Service Resource</description>
    <formula>Resource.Name</formula>
    <inlineHelpText>Name of the Service Resource</inlineHelpText>
    <label>Service Resource Name</label>
    <type>Text</type>
</CustomField>