unpackaged/main/default/objects/ResourceAbsence/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Not yet Approved</fullName>
                <default>true</default>
                <label>Not yet Approved</label>
            </value>
            <value>
                <fullName>Leave Approved</fullName>
                <isActive>false</isActive>
                <label>Leave Approved</label>
            </value>
            <value>
                <fullName>Submitted for Approval</fullName>
                <isActive>false</isActive>
                <label>Submitted for Approval</label>
            </value>
            <value>
                <fullName>Waiting</fullName>
                <isActive>false</isActive>
                <label>Waiting</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>