unpackaged/main/default/objects/ResourceAbsence/recordTypes/Office_Entry.recordType-meta.xml
<RecordType>
    <fullName>Office_Entry</fullName>
    <active>true</active>
    <label>Office Entry</label>
    
        
</RecordType>