unpackaged/main/default/objects/ResourceAbsence/validationRules/Break_Max_30_Mins.validationRule-meta.xml
<ValidationRule>
    <fullName>Break_Max_30_Mins</fullName>
    <active>true</active>
    <description>An Operative can only create an Resource Absence of Type &#39;Break&#39; for a max of 30 mins</description>
    <errorConditionFormula>AND
(
TEXT(Type)=&#39;Break&#39;,
FSL__Duration_In_Minutes__c&gt;30
)</errorConditionFormula>
    <errorMessage>The maximum length of time for a Resource Absence of Type &#39;Break&#39; can be is 30 minutes.</errorMessage>
</ValidationRule>